[package]
name = "tokio-uds"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.5"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://github.com/tokio-rs/tokio"
documentation = "https://docs.rs/tokio-uds/0.2.5/tokio_uds/"
description = """
Unix Domain sockets for Tokio
"""
categories = ["asynchronous"]

[dependencies]
bytes = "0.4.8"
futures = "0.1.21"
iovec = "0.1.2"
libc = "0.2.42"
log = "0.4.2"
mio = { git = "https://github.com/hankbao/mio.git", branch = "v0.6.x-windows" }
mio-uds = { git = "https://github.com/hankbao/mio-uds.git", branch = "custom" }
tokio-codec = "0.1.0"
tokio-reactor = { path = "../tokio-reactor" }
tokio-io = "0.1.6"

[dev-dependencies]
tokio = "0.1.6"
tempfile = "~3.1.0"
